# NPU-PIM-sim

./: LICENSE  README.md
DRAMsim3/: dramsim3.json  dramsim3.txt  dramsim3epoch.json
DRAMsim3/configs/DDR4/: 8Gb_x16_6400_ch1.ini  8Gb_x16_6400_ch2.ini  8Gb_x16_6400_ch3.ini  8Gb_x16_6400_ch4.ini
DRAMsim3/configs/LPDDR5/: 8Gb_x16_6400_ch1.ini  8Gb_x16_6400_ch2.ini  8Gb_x16_6400_ch3.ini  8Gb_x16_6400_ch4.ini
DRAMsim3/src/: bridge.cc  bridge.h  memory_system.cc  memory_system.h
MIDAPSim/: .gitignore  .gitmodules  README.md  config.py
MIDAPSim/code_generator/: __init__.py  opcode_tool.py
MIDAPSim/code_generator/env/: opcode.py  rule.py  sfr.py
MIDAPSim/code_generator/generator/: __init__.py  memory_op_generator.py  opcode_generator.py
MIDAPSim/code_generator/simulator/: __init__.py  address_module.py  buffer.py  control_signal_generator.py  datapath.py  dma_wrapper.py  memory.py  opcode_simulator.py  tvm.py
MIDAPSim/midap_simulator/: dma_memory_manager.py  memory_controller.py  midap_manager.py  packet_manager.py
MIDAPSim/models/transformer/: gemma copy.py  (+1 more)
MIDAPSim/software/: .gitignore
MIDAPSim/tools/: test_system.py
hsim/: CMakeLists.txt  sc_main.cpp
hsim/components/: Top.h  arbiter.cpp  arbiter.h  host.cpp  host.h  mcu.cpp  mcu.h  mem_wrapper.cpp  mem_wrapper.h  midap_wrapper.cpp  midap_wrapper.h  pim_wrapper.cpp  pim_wrapper.h  trace_generator.cpp  trace_generator.h
hsim/configs/: compiler.json  mapping.json  memory.json  system.json
hsim/configs/profile/: LPDDR5.json  LPDDR5_1024.json  LPDDR5_512.json  host.json
hsim/scenarios/: baseline.cpp  partitioned.cpp  partitioned.h  unified.cpp  unified.h
hsim/utilities/: common.h  configurations.cpp  configurations.h  logger.cpp
ramulator2/configs/: DDR4.yaml  GDDR6.yaml  HBM2.yaml  LPDDR5.yaml
ramulator2/src/: Bridge.cpp  Bridge.h
shared/: .args.shmem.dat_1
(+25 files in other folders)
